FIX: #5 Label alignment in create new task is off

--- a/kanboardcss.css
+++ b/kanboardcss.css
@@ -129,7 +129,7 @@ header .board-selector-container {max-width: 25%}
 /* ############################################################ */
 
 .page-header {
-    padding: 0px 0px 5px 15px;
+    padding: 0px 0px 3px 15px;
     background-color: #0e0e0e4d;
     font-size: small;
 }
